# unit-averaging

./: .gitignore  LICENSE  README.md  pyproject.toml  tutorial_prep.ipynb
.github/workflows/: build-deploy-docs.yml  code-quality.yml  coverage.yml  publish-to-pypi.yml
docs/examples/: GALLERY_HEADER.rst  docs_plot_utils.py  docs_utils.py  germany_plot_utils.py  plot_1_basics.py  plot_2_custom_basic.py  plot_3_custom_advanced.py  plot_3_prior_info.py  tutorial_prep.ipynb
docs/examples/data/: tutorial_data.csv
docs/examples/data/aab_shapefiles/: Deutschland_Agenturbezirke.dbf  Deutschland_Agenturbezirke.sbn  Deutschland_Agenturbezirke.sbx  Deutschland_Agenturbezirke.shx  Deutschland_Agenturbezirke.xml
docs/source/: conf.py  index.rst  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/_static/css/: custom.css
docs/source/reference/: BaseFocusFunction.rst  BaseUnitAverager.rst  FocusFunction.rst  IdentityFocusFunction.rst  IndividualUnitAverager.rst  InlineFocusFunction.rst  MeanGroupUnitAverager.rst  OptimalUnitAverager.rst  SteinUnitAverager.rst  averagers.rst  base_unit_averager.rst  focus_functions.rst  index  index.rst  individual_unit_averager.rst  inline_focus_function.rst
docs/source/theory/: exp.md  theory.md  theory.rst
docs/source/tutorials/: creating-averagers-simple.rst  index.rst  running-averaging.rst
src/unit_averaging/: __init__.py  averager.py  focus_function.py  weights.py
test/: test_averager.py  test_fixed_n_optimal_averager.py  test_focus_functions.py  test_individual_averager.py  test_large_n_optimal_averager.py  test_mean_group_averager.py  test_stein_averager.py
